--- a/app/src/main/res/layout/fragment_advertiser.xml
+++ b/app/src/main/res/layout/fragment_advertiser.xml
@@ -29,7 +29,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:checked="false"
-            android:text="Advertise"
+            android:text="@string/advertiser"
             android:gravity="center"
             />
 
