--- a/app/src/main/res/layout/fragment_advertiser.xml
+++ b/app/src/main/res/layout/fragment_advertiser.xml
@@ -16,7 +16,10 @@
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"/>
 
     <LinearLayout
         android:gravity="center"
