--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,15 +5,15 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_advertiser"
             android:icon="@drawable/ic_menu_advertiser"
             android:title="@string/advertiser" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_scanner"
             android:icon="@drawable/ic_menu_scanner"
             android:title="@string/scanner" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_history"
             android:icon="@drawable/ic_menu_history"
             android:title="@string/history" />
     </group>
